# makems

./: .dockerignore  .gitignore  Dockerfile  README.txt  README_build.txt
.ci/: ubuntu.20.04.docker  ubuntu.22.04.docker  ubuntu.24.04.docker
.github/workflows/: docker-image.yml
LOFAR/: CMakeLists.txt  Makefile  lofar_config.h.cmake  lofarconf.in  lofarconf.in.private  lofstorman  package.dox  releases.txt
LOFAR/CEP/: CMakeLists.txt  lofarconf.in  package.dox
LOFAR/CEP/MS/: CMakeLists.txt  Makefile.am  configure.in  package.dox
LOFAR/CEP/MS/src/: CMakeLists.txt  MSCreate.cc  MSSplit.cc  Makefile.am  Package__Version.cc  VdsMaker.cc  combinevds.cc  lofar_stations.coord  makems.cc  makems.cfg  makemsdistr  makemsdistr-part  makevds.cc  msplay.cc  mssplit  mssplit.g  statconv.g  trysplit.g  versionms.cc
LOFAR/CEP/MS/test/: CMakeLists.txt  Makefile.am  tMSSplit.cc  tMSSplit.run  tMSSplit.sh  tcombinevds.in_vds1  tcombinevds.in_vds2  tcombinevds.run  tcombinevds.sh  tcombinevds.stdout  tmakems.in_antenna.tgz  tmakems.parset  tmakems.run  tmakems.sh  tmakems.stdout
LOFAR/CMake/: CMakeASM-BGPInformation.cmake  CMakeDetermineASM-BGPCompiler.cmake  CMakeTestASM-BGPCompiler.cmake  FindBISON.cmake  FindBacktrace.cmake  FindBlitz.cmake  FindBoost.cmake  FindCPPLapack.cmake  FindCasacore.cmake  FindFFTW2.cmake  FindFFTW3.cmake  FindFLEX.cmake  FindLog4Cplus.cmake  FindLog4Cxx.cmake  FindMASS.cmake  FindMPI.cmake  FindPQXX.cmake  FindPVSS.cmake  FindPyrap.cmake  FindPython.cmake  FindReadline.cmake  LofarAddPackage.cmake  LofarCTest.cmake  LofarConfig.cmake  LofarFindPackage.cmake  LofarGeneral.cmake  LofarInit.cmake  LofarMacros.cmake  LofarOptions.cmake  LofarPackageVersion.cmake  LofarSearchPath.cmake  LofarVariants.cmake  MACAddProtocol.cmake  TODO  makeversion
LOFAR/CMake/variants/: variants  variants.bgfen0  variants.dop131  variants.macdiepen  variants.rs002
LOFAR/LCS/: CMakeLists.txt  lofar_config.h.cmake  lofarconf.in  package.dox
LOFAR/LCS/Common/: AUTHORS  CMakeLists.txt  ChangeLog  Common.spec.in  INSTALL  Makefile.am  NEWS  README  config.h.cmake  configure.in  package.dox
LOFAR/LCS/Common/include/: Makefile.am
LOFAR/LCS/Common/include/Common/: AddressTranslator.h  Allocator.h  Backtrace.h  CMakeLists.txt  CheckConfig.h  ComplexBuiltinFP.h  ComplexBuiltinInt.h  ComplexC99.h  ComplexStdFP.h  ComplexStdInt.h  DataConvert.h  DataFormat.h  Exception.h  Exceptions.h  FileLocator.h  KVpair.h  LofarConstants.h  LofarLocators.h  LofarLog4Cplus.h  LofarLog4Cxx.h  LofarLogCout.h  LofarLogger.h  LofarTypedefs.h  LofarTypes.h  Makefile.am  Numeric.h  ObjectFactory.h  Package__Version.h  ParameterSet.h  ParameterSetImpl.h  ParameterValue.h  PrettyUnits.h  Process.h  ReadLine.h  RunOnNode.h  Semaphore.h  Singleton.h  Stopwatch.h  StreamUtil.h  StringUtil.h  (+30 more)
LOFAR/LCS/Common/include/Common/Net/: FdSet.h  Socket.h
LOFAR/LCS/Common/include/Common/shmem/: Makefile.am  dlmalloc.h  segbasemap.h  shmem_alloc.h
LOFAR/LCS/Common/src/: AddressTranslator.cc  Allocator.cc  Backtrace.cc  CMakeLists.txt  Common-Model.cat  DataConvert.cc  Exception.cc  FileLocator.cc  KVpair.cc  LofarLogCout.cc  LofarLogger.cc  Makefile.am  Numeric.cc  Package__Version.cc  ParameterSet.cc  ParameterSetImpl.cc  ParameterValue.cc  PrettyUnits.cc  Process.cc  ReadLine.cc  RunOnNode.cc  Stopwatch.cc  StreamUtil.cc  StringUtil.cc  SymbolTable.cc  SystemUtil.cc  Timer.cc  TypeNames.cc  Version.cc  getparsetvalue.cc  hexdump.cc  lofar_bitset.cc  versioncommon.cc
LOFAR/LCS/Common/src/Net/: FdSet.cc  Socket.cc
LOFAR/LCS/Common/src/Net/backward/: Socket.cc
LOFAR/LCS/Common/src/shmem/: Makefile.am  dlmalloc.c  segbasemap.cc  shmem_alloc.cc
LOFAR/LCS/Common/test/: CMakeLists.txt  Coordinates.cc  Coordinates.h  Makefile.am  Shapes.cc  Shapes.h  nocase2normal.sed  tAllocator.cc  tAllocator.sh  tBacktrace.cc  tComplex.cc  tComplex.sh  tComplex.stdout  tDataConvert.cc  tDataConvert.sh  tDataConvert.stdout  tFileLocator.cc  tFileLocator.sh  tHexdump.cc  tHexdump.log_prop  tHexdump.run  tHexdump.sh  tHexdump.stdout  tNumeric.cc  tNumeric.run  tNumeric.sh  tNumeric.stdout  tObjectFactory.cc  tObjectFactory.sh  tObjectFactory.stdout  tParameterSet.cc  tParameterSet.in_merge_nocase  tParameterSet.in_merge_normal  tParameterSet.in_param_nocase  tParameterSet.in_param_normal  tParameterSet.log_prop  tParameterSet.sh  tParameterSet.stdout  tParameterSetPerf.cc  tParameterSetPerf.run  (+47 more)
LOFAR/LCS/Tools/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  Tools.spec.in  config.h.cmake  (+3 more)
LOFAR/LCS/Tools/src/: CMakeLists.txt  LimitExec.cc  Makefile.am  checkrun  countalllines  fillreview  finddep  lofarcvsmv  lofarcvsx  lofarinit.csh.in  lofarinit.sh.in  makeClass.py  makePackage.py  makeTest.py  makecov  makedep.sh  makedoc  pkgdep.cc  processgcov  remote_lofarcvsmv
LOFAR/LCS/Tools/src/templates/: header.cc_template  header.h_template  include_makefile.am_template  include_pkg_makefile.am_template  main.cc_template  package_bootstrap_template  package_configure.in_template  package_lofarconf.in_template  package_makefile.am_template  package_spec.in_template  src_makefile.am_template  templated_header.cc_template  templated_header.h_template  templated_header.tcc_template  test.cc_template  test.in_template  test.sh_template  test_makefile.am_template
LOFAR/autoconf_share/: Makefile.common  ac_cxx.m4  assay  bootstrap  buildsys  checkfloat  compiletool  countlines  countpurecode  countpurecodecomm  createNewIndex  cvs2cl.pl  default.log_prop  dorubbuild  doxygen.cfg  findpkg  limitexec.sh  lofar_aips++.m4  lofar_blitz.m4  lofar_corba.m4  lofar_docxx.m4  lofar_dtl.m4  lofar_external.m4  lofar_fft.m4  lofar_general.m4  lofar_init.m4  lofar_internal.m4  lofar_lapack.m4  lofar_logger.m4  lofar_matlab.m4  lofar_mpi.m4  lofar_package.m4  lofar_pvss.m4  lofar_python.m4  lofar_qatools.m4  lofar_qt.m4  lofar_shmem.m4  lofar_xerces.m4  lofarconf  lofarconf_recur  (+36 more)
doc/WSRT_ANTENNA/: table.f0
doc/examples/: README
doc/mkant/: README  mkant.py
examples/: makems.cfg
examples/mkant/: mkant.py
(+30 files in other folders)
